background image and text

--- a/index.html
+++ b/index.html
@@ -6,8 +6,50 @@
     <link rel="stylesheet" href="./resources/css/reset.css">
     <link rel="stylesheet" href="./resources/css/style.css">
   </head>
+
   <body>
-    <h1>hello!</h1>
+
+    <header>
+
+        <nav>
+          <ul>
+            <li> <a href="#">Home</a> </li>
+            <li> <a href="#">Booking Enquiry</a> </li>
+            <li> <a href="#">Testimonials</a> </li>
+            <li> <a href="#">Contact</a> </li>
+          </ul>
+        </nav>
+
+    </header>
+
+    <section>
+
+      <div class="main">
+        <div class="secret">
+          <h1>Dog Walking Name</h1>
+        </div> <!--secret div closes-->
+
+      <div class="welcome">
+          <div class="welcome-text">
+        <p>My name is Emma and I have been fortunate to channel my passion for dogs into a successful dog walking business.  I have been a dog walker for over 8 years in Harrow and I am fully insured.  My clients feel that I am trustworthy and reliable.</p>
+        <p>As the title suggests, I walk dogs with love and care and their well-being is my priority.  My hours are flexible to suit the busy lives of most people.  I take dogs to local parks and give them the opportunity to play games and explore.</p>
+        <p>You can be assured of peace of mind that while you are out, your dog is being looked after and that the will be returned to you happy and healthy.</p>
+        </div> <!--welcome-text div closes-->
+
+
+        <li> 60 minutes Individual  £7</li>
+        <li> 90 minutes Group  £11</li>
+        <li> Boarding £25</li>
+        <li> Day Care £21</li>
+      </div> <!--welcome div closes-->
+
+      <div class="support-text">
+        <h2>Booking Enquiry</h2>
+      </div> <!--support-text div closes-->
+
+    </div> <!--main div closes-->
+
+    </section>
 
   </body>
 </html>
